// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tcp client test should work: After Login 1`] = `
Object {
  "authErr": null,
  "connected": true,
  "loading": false,
  "loggedIn": true,
  "user": Object {
    "_id": "u1",
    "email": "u1",
  },
}
`;

exports[`tcp client test should work: Before Login 1`] = `
Object {
  "authErr": null,
  "connected": true,
  "loading": false,
  "loggedIn": false,
  "user": null,
}
`;
